--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flip_card: ^0.5.0
   google_fonts: ^2.1.0
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
